added radial menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="css/master.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
   <script type="text/javascript" src="js/jquery.doubletap.js"></script> 
+  <script type="text/javascript" src="js/jQuery.radmenu.js"></script> 
   <script type="text/javascript" src="js/Hyphenator.js"></script> 
   <script type="text/javascript" src="js/bibliotype.js"></script>
 
@@ -67,6 +68,18 @@
       </div>
     </menu>
   
+  </div>
+  
+  <div class="radial_container"> 
+	<ul class="list"> 
+		<li class="item"><span class="size1">bed</span></li> 
+		<li class="item"><span class="size2">knee</span></li> 
+		<li class="item"><span class="size3">bkfast</span></li> 
+		<li class="item"><span class="rag">ragged</span></li> 
+		<li class="item"><span class="geo">serif</span></li> 
+		<li class="item"><span class="lowc">low</span></li> 
+		<li class="item"><span class="hyp">hyph-<sup>TODO</sup></span></li> 
+	</ul> 
   </div>
 
   <div id="content_container" class="knee">
